<resources>
    <string name="app_name">Glostars</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main_feed">MainFeed</string>
    <string-array name="genders">
        <item name="Male">Male</item>
        <item name="Female">Female</item>
    </string-array>
    <string-array name="iam">
        <item name="User">User</item>
        <item name="Investor">Investor</item>
        <item name="Sponsor/Advertiser">Sponsor/Advertiser</item>
    </string-array>
    <string-array name="occupation">
        <item>Occupation</item>
        <item>Student</item>
        <item>Businessman</item>
        <item>Photographer</item>
        <item>Unemployed</item>
        <item>Service Holder</item>
        <item>Doctor</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_user_profile">user_profile</string>
    <string name="title_activity_test">test</string>
    <string name="light">
        Applying the light in a right way will make good impression by any photo you take – that is why it is an essential thing to keep in mind. You can get the best shot when the subject is lit from the side or from the front.
    </string>
    <string name="zoom">
        If you want to take a good picture, forget about zooming using your phone! A better solution for zooming is to move yourself or change an angle you want to take picture from. If moving is not possible, you can crop the picture later to get the desired shot.
    </string>
    <string name="backgroundtips">
        I can\'t even describe how often I\'ve taken a great shot, only to be unable to enter it into a contest because something in the background doesn\'t look right. So before you click that button, make sure that everything looks right. Learning how to see the world like your camera does can help with this.
    </string>
    <string name="frame">
        Try to place the objects in the foreground to frame the main subjects in your picture. Windows, arches, doorways etc. can form natural frames. 
    </string>
    <string name="perspective">
        Pictures taken from different angles are more buzzworthy. Change your place and take some original shots! Try to use apps as well to add some special effects. 
    </string>
    <string name="crop">
        Nowadays we all have hectic lifestyles so very often we don’t have much time to think carefully about the composition when taking a picture, so the advice is to take a wider picture. You can modify it latter by cropping unnecessary parts if needed.  </string>
    <string name="apps">
        There are a lot of apps on the market that can add significant value to the picture and allow to use DLSR camera functions and special effects while shooting. Don’t be afraid to get the best shot possible. </string>
    <string name="phnfeatures">
        Don’t forget that your phone camera has a set of features itself without using extra apps. For example, you can use HDR or turn on the grid which will help you to shoot according to the rule of thirds. As well, you can set the exposure and choose the amount of light in the picture.
    </string>
    <string name="Terms">
        •	To win prizes a user must complete his or her profile (i.e. Upload Profile Picture and fill in other requested information). Any picture submitted to win prizes will not be considered if the user has not provided the requested information to complete his or her profile.
\n\n•	Amount of pictures that can be submitted in the competition is not limited but it should be within the limit of total number of pictures a user can have in his or her profile.
\n\n•	Only one rating by a registered user will be considered, however a user can change the rating at any time.
\n\n•	Photos with identifiable watermarks (any text or date embedded in the image) will not be considered for the competition.
\n\n•	Any picture submitted by an international celebrity or a picture of an international celebrity will not be considered for winning the prizes.
\n\n•	Users will be responsible for any dispute related to the originality and ownership of the picture.
\n\n•	Glostars rewarding mechanism aims to promote individuals’ photography skill; therefore, any downloaded picture will not be considered for winning prizes in competition.
\n\n•	While uploading any picture please use your common sense.
\n\n•	If any user misuses the platform to win the competition, then all the pictures of that user will be disqualified from the competition for that term.
\n\n•	Submission of pictures for Jan – Apr 2017 competition term ends on April 30th at midnight (23:59) Eastern European Time. Rating period also ends on April 30th at midnight (23:59) Eastern European Time.
\n\n•	There will be one picture of the week prize starting from January 1 until April 23, 2017. First picture of the week will be selected among all the pictures submitted from January 1 – 22, 2017
\n\n•	All prizes must be claimed within one (1) week after announcement. It is preferred to collect it personally then other alternatives must be agreed with Glostars.
\n\n•	If sending the prize is not possible to the location of the winner, then Glostars reserves all the rights to take alternative decision.
\n\n•	The distribution of prize may take up to two (2) months depending on the location of the winner.
\n\n•	One user can win only one (1) of the grand prizes (If one user wins more than one position for the final prizes then only the highest one will be considered), also (1) one of the picture of the week prizes and (1) one of the monthly prizes.
\n\n•	Pictures submitted in the Hashtag (#) competition by Glostars are eligible for Hashtag (#) competition prizes and Grand Prizes only.
\n\n•	Same picture which won week competition will not be considered for the monthly prize, but other picture of the same user can be considered if uploaded in that particular month.
\n\n•	In order to claim any prize, you will have to proof your identity by providing valid document.
\n\n•	Glostars may use the winning picture for marketing purpose with permission of the owner.
\n\n•	Individual picture of the winner must be sent to Glostars while claiming the prize, which will be used for marketing purpose.
\n\n•	Glostars current employees, sponsors of the prizes, investors and other individuals directly related with Glostars cannot win any of the prizes.
\n\n•	Overall, Glostars reserves all the rights to disqualify any picture which the company considers to be inappropriate.


    </string>
    <string name="aboutus">
        Glostars is a photo-sharing platform which allows individuals, groups or organizations to share pictures among global audience. In contrast to existing platforms, it has competition feature running on regular basis where a user can win exciting prizes based on community voting. Moreover, Glostars is not only a platform for competing for prizes, user can share picture among very limited circle or for all too; thus user has full freedom in sharing picture here at Glostars. Additionally, we do not take the rights of the content shared on our platform. Thus you can share your content without fear of losing the rights on it!

    </string>
    <string name="offers">
        Currently user can share, star (or vote) picture and grow network among a global community. While sharing picture, a user can share it only among mutual followers (i.e. when both parties are following each other) or with public or can submit in photo competition. Among the pictures submitted in competition, we give prizes to the highest starred (or voted) picture every week, every month and finally the grand prizes at the end of competition term (i.e. after every 4 months in a calendar year). Moreover, at the end of the competition term we organize Photo Exhibition with top 50 pictures of that term.
    </string>
    <string name="difference">
        •	We reward and recognize people’s photography on regular basis through prizes and spot in exhibition
        \n•	We do not take copyrights of the shared picture
        \n•	We offer better control in sharing your pictures online

    </string>
    <string name="achievements">
        We started our operation globally in January 2016. And in this short time we have awarded more than 80 pictures coming from different parts of the world. Also, we have organized 3 international photo exhibitions in Finland portraying over 150 top voted pictures.
    </string>
    <string name="what">
        Glostars is a photo-sharing platform where you can upload pictures to share with friends or public or to submit in photo competition. Along with connecting you with your friends we aim to reward and recognize the pictures you share on our platform based on community voting.
    </string>
    <string name="who">Starting from 13 years old anyone can Sign up at Glostars. </string>
    <string name="cost">No, the service is completely free of charge. </string>
    <string name="copyright">No, Glostars does not reserve the rights on the shared pictures unlike many other photo sharing services. </string>
    <string name="prizes">Anyone who submit pictures in competition in accordance to terms and conditions can win prizes. </string>
    <string name="winners">Winners are selected based on the highest number of stars (or rating). </string>
    <string name="seepics">You can either make a picture visible for public or only for your friends. </string>
    <string name="comptheme">No, you can submit any photo complying with terms and conditions of the competition. </string>
    <string name="cameragood">No, the quality of the photo is not the focus point, matter is the popularity of your picture. </string>
    <string name="security">All the information and contents uploaded at Glostars are hosted at Microsoft platform, which ensures highest possible security. </string>
    <string name="collectprize">All prizes must be claimed within one week after announcement. It is preferred to collect it in person but other alternatives must be agreed with Glostars. </string>
</resources>